proj1/testing/error/trivialerr7.inp
* B BETA I II III AA!AA
Hello world
* B BETA I II III AAAA
ILBDA AMTAZ
